compiler/tools/fpp-check/test/connection_pattern/time_missing_target_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/time_missing_target_port.fpp: 16.39
    time connections instance $time { c }
                                      ^
error: instance c has no time get port
